fix: Don't collapse email form

--- a/src/sharing/share.styl
+++ b/src/sharing/share.styl
@@ -66,6 +66,9 @@
     > .share-byemail-onlybylink
         margin 0
 
+    .coz-form-group
+      flex-shrink 0
+
     .share-modal-access
       flex-shrink 1
       overflow auto
